Klausur wird beim Exportieren in den Download Ordner gelegt und Klausurvorschau optimiert